# game_design

./: CMakeLists.txt  README.md  game.m.cpp
src/: CMakeLists.txt  myclass.cpp  myclass.h
